--- a/Project Roentgen/src/view/RadiologistView.fxml
+++ b/Project Roentgen/src/view/RadiologistView.fxml
@@ -27,23 +27,22 @@
                     <items>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
-                              <TableView prefHeight="441.0" prefWidth="972.0">
+                              <TableView fx:id="patientTableView" prefHeight="441.0" prefWidth="972.0">
                                 <columns>
-                                  <TableColumn prefWidth="152.0" text="Last Name" />
-                                  <TableColumn minWidth="0.0" prefWidth="160.0" text="First Name" />
-                                    <TableColumn prefWidth="146.0" text="DOB" />
-                                    <TableColumn prefWidth="157.0" text="SSN" />
-                                    <TableColumn prefWidth="149.0" text="Last Appt." />
-                                    <TableColumn prefWidth="107.0" text="Next Appt." />
-                                    <TableColumn prefWidth="98.0" text="Edit Patient" />
+                                  <TableColumn fx:id="lastNameTableColumn" prefWidth="196.0" text="Last Name" />
+                                  <TableColumn fx:id="firstNameTableColumn" minWidth="0.0" prefWidth="182.0" text="First Name" />
+                                    <TableColumn fx:id="dobTableColumn" prefWidth="176.0" text="DOB" />
+                                    <TableColumn fx:id="ssnTableColumn" prefWidth="176.0" text="SSN" />
+                                    <TableColumn fx:id="lastApptTableColumn" prefWidth="125.0" text="Last Appt." />
+                                    <TableColumn fx:id="nextApptTableColumn" prefWidth="116.0" text="Next Appt." />
                                 </columns>
                               </TableView>
                            </children>
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="291.0" prefWidth="824.0">
                            <children>
-                              <TextField layoutX="45.0" layoutY="14.0" promptText="Last Name" />
-                              <TextField layoutX="249.0" layoutY="14.0" promptText="First Name" />
+                              <TextField fx:id="newPatLastNameField" layoutX="45.0" layoutY="14.0" promptText="Last Name" />
+                              <TextField fx:id="newPatFirstNameField" layoutX="249.0" layoutY="14.0" promptText="First Name" />
                               <MenuButton layoutX="448.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Month">
                                 <items>
                                   <MenuItem mnemonicParsing="false" text="Action 1" />
