--- a/Project Roentgen/bin/view/LoginView.fxml
+++ b/Project Roentgen/bin/view/LoginView.fxml
@@ -2,20 +2,27 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="201.0" prefWidth="288.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="286.0" prefWidth="436.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="41.0" layoutY="14.0" text="RIS Login">
+      <Label layoutX="137.0" layoutY="14.0" text="RIS Login">
          <font>
-            <Font size="50.0" />
+            <Font size="40.0" />
          </font>
       </Label>
-      <Button layoutX="121.0" layoutY="162.0" mnemonicParsing="false" text="Login" />
-      <TextField layoutX="70.0" layoutY="88.0" promptText="Email" />
-      <TextField layoutX="70.0" layoutY="130.0" promptText="Password" />
+      <Button layoutX="196.0" layoutY="247.0" mnemonicParsing="false" text="Login" />
+      <TextField layoutX="144.0" layoutY="167.0" promptText="Email" />
+      <TextField layoutX="145.0" layoutY="211.0" promptText="Password" />
+      <MenuButton layoutX="165.0" layoutY="118.0" mnemonicParsing="false" text="View Selection">
+        <items>
+          <MenuItem mnemonicParsing="false" text="Action 1" />
+          <MenuItem mnemonicParsing="false" text="Action 2" />
+        </items>
+      </MenuButton>
    </children>
 </AnchorPane>
