--- a/Project Roentgen/src/view/LoginView.fxml
+++ b/Project Roentgen/src/view/LoginView.fxml
@@ -2,20 +2,29 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="201.0" prefWidth="288.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="269.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="41.0" layoutY="14.0" text="RIS Login">
+      <Label layoutX="52.0" layoutY="147.0" text="RIS Login">
          <font>
-            <Font size="50.0" />
+            <Font size="40.0" />
          </font>
       </Label>
-      <Button layoutX="121.0" layoutY="162.0" mnemonicParsing="false" text="Login" />
-      <TextField layoutX="70.0" layoutY="88.0" promptText="Email" />
-      <TextField layoutX="70.0" layoutY="130.0" promptText="Password" />
+      <Button layoutX="112.0" layoutY="313.0" mnemonicParsing="false" text="Login" />
+      <TextField layoutX="60.0" layoutY="242.0" promptText="Email" />
+      <TextField layoutX="61.0" layoutY="280.0" promptText="Password" />
+      <MenuButton layoutX="80.0" layoutY="205.0" mnemonicParsing="false" text="View Selection">
+        <items>
+          <MenuItem mnemonicParsing="false" text="Action 1" />
+          <MenuItem mnemonicParsing="false" text="Action 2" />
+        </items>
+      </MenuButton>
+      <ImageView fitHeight="143.0" fitWidth="200.0" layoutX="35.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
