--- a/Project Roentgen/bin/view/RadiologistView.fxml
+++ b/Project Roentgen/bin/view/RadiologistView.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -21,7 +20,7 @@
   <tabs>
     <Tab text="Patients">
       <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
                   <SplitPane dividerPositions="0.7771929824561403" orientation="VERTICAL" prefHeight="572.0" prefWidth="972.0">
                     <items>
@@ -43,31 +42,32 @@
                            <children>
                               <TextField fx:id="newPatLastNameField" layoutX="45.0" layoutY="14.0" promptText="Last Name" />
                               <TextField fx:id="newPatFirstNameField" layoutX="249.0" layoutY="14.0" promptText="First Name" />
-                              <MenuButton layoutX="448.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Month">
+                              <MenuButton fx:id="monthMenuButton" layoutX="448.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Month">
                                 <items>
                                   <MenuItem mnemonicParsing="false" text="Action 1" />
                                   <MenuItem mnemonicParsing="false" text="Action 2" />
                                 </items>
                               </MenuButton>
-                              <MenuButton layoutX="535.0" layoutY="14.0" mnemonicParsing="false" text="Day">
+                              <MenuButton fx:id="dayMenuButton" layoutX="535.0" layoutY="14.0" mnemonicParsing="false" text="Day">
                                 <items>
                                   <MenuItem mnemonicParsing="false" text="Action 1" />
                                   <MenuItem mnemonicParsing="false" text="Action 2" />
                                 </items>
                               </MenuButton>
-                              <MenuButton layoutX="604.0" layoutY="14.0" mnemonicParsing="false" text="Year">
+                              <MenuButton fx:id="yearMenuButton" layoutX="604.0" layoutY="14.0" mnemonicParsing="false" text="Year">
                                 <items>
                                   <MenuItem mnemonicParsing="false" text="Action 1" />
                                   <MenuItem mnemonicParsing="false" text="Action 2" />
                                 </items>
                               </MenuButton>
-                              <TextField layoutX="699.0" layoutY="14.0" promptText="Social Security Number" />
+                              <TextField fx:id="newPatSSNField" layoutX="699.0" layoutY="14.0" promptText="Social Security Number" />
                               <Button layoutX="865.0" layoutY="14.0" mnemonicParsing="false" text="Create Patient" />
                            </children>
                         </AnchorPane>
                     </items>
                   </SplitPane>
-               </children></AnchorPane>
+               </children>
+            </AnchorPane>
       </content>
     </Tab>
       <Tab text="Patient Info">
@@ -151,11 +151,7 @@
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="507.0" prefWidth="585.0">
                            <children>
-                              <ImageView fitHeight="507.0" fitWidth="654.0" layoutX="126.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@download.jpg" />
-                                 </image>
-                              </ImageView>
+                              <ImageView fitHeight="507.0" fitWidth="613.0" layoutX="63.0" pickOnBounds="true" preserveRatio="true" />
                               <Button layoutY="2.0" mnemonicParsing="false" text="+" />
                               <Button layoutX="-1.0" layoutY="27.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="26.0" text="-" />
                               <Button layoutX="-1.0" layoutY="52.0" mnemonicParsing="false" text="100%" />
