--- a/Project Roentgen/bin/view/RadiologistView.fxml
+++ b/Project Roentgen/bin/view/RadiologistView.fxml
@@ -84,7 +84,7 @@
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
-                              <Button layoutX="175.0" layoutY="14.0" mnemonicParsing="false" text="Select File" />
+                              <Button layoutX="175.0" layoutY="14.0" mnemonicParsing="false" onAction="#selectFilePressed" text="Select File" />
                               <TextField layoutX="14.0" layoutY="13.0" promptText="Title" />
                               <Label layoutX="380.0" layoutY="9.0" text="Upload New Report">
                                  <font>
