finished adding and naming objects

--- a/Project Roentgen/src/view/ReceptionistView.fxml
+++ b/Project Roentgen/src/view/ReceptionistView.fxml
@@ -11,16 +11,18 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ReceptionistController">
    <children>
       <SplitPane dividerPositions="0.15776293823038398" prefHeight="700.0" prefWidth="1200.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <DatePicker fx:id="displayDatePicker" layoutX="6.0" layoutY="2.0" promptText="Display Date" />
+                  <DatePicker fx:id="displayDatePicker" layoutX="6.0" layoutY="2.0" onAction="#updateTimeSlots" promptText="Display Date" />
                   <AnchorPane layoutY="40.0" prefHeight="155.0" prefWidth="186.0" style="-fx-border-color: black;">
                      <children>
                         <Label layoutX="77.0" layoutY="6.0" text="Filters">
@@ -73,6 +75,58 @@
                                     <Font name="System Bold" size="20.0" />
                                  </font>
                               </Label>
+                              <GridPane layoutX="1.0" layoutY="44.0" prefHeight="655.0" prefWidth="472.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#editAppointmentPushed" text="Edit Appointment" GridPane.rowIndex="5" />
+                                    <Button mnemonicParsing="false" onAction="#deleteAppointmentPushed" text="Delete Appointment" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                    <Label text="Date/Time:" />
+                                    <GridPane GridPane.rowIndex="1">
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                       <children>
+                                          <Label text="Patient:" />
+                                          <Button disable="true" mnemonicParsing="false" text="Edit Patient Info" GridPane.rowIndex="1" />
+                                       </children>
+                                    </GridPane>
+                                    <ChoiceBox fx:id="apptInfoPatientChoiceBox" disable="true" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <Label text="Modality:" GridPane.rowIndex="2" />
+                                    <ChoiceBox fx:id="apptInfoModalityChoiceBox" disable="true" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                    <Label text="Selected Body Parts:" GridPane.rowIndex="3" />
+                                    <Label text="Additional Info:" GridPane.rowIndex="4" />
+                                    <TextField fx:id="apptInfoBodyPartsTextField" editable="false" promptText="Body Part(s)" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                    <TextArea fx:id="apptInfoDescTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" promptText="Insert Appointment Description Here" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                    <GridPane GridPane.columnIndex="1">
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                       <children>
+                                          <DatePicker fx:id="apptInfoDatePicker" disable="true" />
+                                          <ChoiceBox fx:id="apptInfoTimeChoiceBox" prefWidth="150.0" GridPane.rowIndex="1" />
+                                       </children>
+                                    </GridPane>
+                                 </children>
+                              </GridPane>
                            </children>
                         </AnchorPane>
                     </items>
