--- a/Project Roentgen/src/view/MDView.fxml
+++ b/Project Roentgen/src/view/MDView.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="631.0" prefWidth="1011.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.4">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="631.0" prefWidth="1011.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.4" fx:controller="controller.MDController">
   <tabs>
-    <Tab text="M.D. View">
+    <Tab closable="false" text="M.D. View">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
@@ -31,12 +31,12 @@
                                           <Font size="18.0" />
                                        </font>
                                     </Label>
-                                    <ListView layoutY="36.0" prefHeight="565.0" prefWidth="260.0" />
+                                    <ListView id="mdListView" layoutY="36.0" prefHeight="565.0" prefWidth="260.0" />
                                  </children>
                               </AnchorPane>
                               <ScrollPane layoutX="258.0" prefHeight="600.0" prefWidth="503.0">
                                 <content>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="583.0" prefWidth="503.0">
+                                  <AnchorPane id="images" minHeight="0.0" minWidth="0.0" prefHeight="583.0" prefWidth="503.0">
                                        <children>
                                           <Label layoutX="4.0" layoutY="10.0" prefHeight="26.0" prefWidth="485.0" text="Images: ">
                                              <font>
@@ -59,8 +59,8 @@
                                           <Font size="18.0" />
                                        </font>
                                     </Label>
-                                    <ListView layoutX="5.0" layoutY="37.0" prefHeight="253.0" prefWidth="239.0" />
-                                    <MediaView fitHeight="280.0" fitWidth="238.0" layoutX="5.0" layoutY="314.0" />
+                                    <ListView id="mdPatientInfoListView" layoutX="5.0" layoutY="37.0" prefHeight="253.0" prefWidth="239.0" />
+                                    <MediaView id="radiologistReportMediaView" fitHeight="280.0" fitWidth="238.0" layoutX="5.0" layoutY="314.0" />
                                  </children>
                               </AnchorPane>
                            </children>
@@ -70,7 +70,7 @@
                </children></AnchorPane>
       </content>
     </Tab>
-    <Tab text="Patient Request">
+    <Tab closable="false" text="Patient Request">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
@@ -81,23 +81,23 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <ListView layoutX="14.0" layoutY="37.0" prefHeight="266.0" prefWidth="984.0" />
+                        <ListView id="patientRequestListView" layoutX="14.0" layoutY="37.0" prefHeight="266.0" prefWidth="984.0" />
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="-1.0" layoutY="303.0" prefHeight="297.0" prefWidth="1011.0">
                      <children>
-                        <Button layoutX="448.0" layoutY="241.0" mnemonicParsing="false" text="Submit Request" />
-                        <ChoiceBox accessibleRole="CHECK_MENU_ITEM" layoutX="120.0" layoutY="188.0" prefHeight="27.0" prefWidth="167.0" />
-                        <TextField layoutX="121.0" layoutY="61.0" promptText="Patient ID" />
-                        <TextField layoutX="422.0" layoutY="61.0" promptText="First Name" />
-                        <TextField layoutX="723.0" layoutY="61.0" promptText="Last Name" />
-                        <TextField layoutX="121.0" layoutY="122.0" promptText="Body Part" />
+                        <Button id="submitRequest" layoutX="448.0" layoutY="241.0" mnemonicParsing="false" text="Submit Request" />
+                        <ChoiceBox id="procedureType" accessibleRole="CHECK_MENU_ITEM" layoutX="120.0" layoutY="188.0" prefHeight="27.0" prefWidth="167.0" />
+                        <TextField id="patientId" layoutX="121.0" layoutY="61.0" promptText="Patient ID" />
+                        <TextField id="patientFirstName" layoutX="422.0" layoutY="61.0" promptText="First Name" />
+                        <TextField id="patientLastName" layoutX="723.0" layoutY="61.0" promptText="Last Name" />
+                        <TextField id="requestBodyPart" layoutX="121.0" layoutY="122.0" promptText="Body Part" />
                         <Label layoutX="14.0" layoutY="3.0" prefHeight="23.0" prefWidth="194.0" text="Procedure Request: ">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <TextArea layoutX="421.0" layoutY="122.0" prefHeight="93.0" prefWidth="514.0" promptText="Reason For Procedure..." />
+                        <TextArea id="requestDescription" layoutX="421.0" layoutY="122.0" prefHeight="93.0" prefWidth="514.0" promptText="Reason For Procedure..." />
                      </children>
                   </AnchorPane>
                </children></AnchorPane>
